crates/oxc_linter_rules/src/snapshots/jsdoc_require_returns_description.snap
---
source: crates/oxc_linter_rules/src/tester.rs
---

  ⚠ jsdoc(require-returns-description): Missing JSDoc `@returns` description.
   ╭─[require_returns_description.tsx:3:17]
 2 │                       /**
 3 │                        * @returns
   ·                          ────────
 4 │                        */
   ╰────
  help: Add description comment to `@returns` tag.

  ⚠ jsdoc(require-returns-description): Missing JSDoc `@returns` description.
   ╭─[require_returns_description.tsx:3:17]
 2 │                       /**
 3 │                        * @returns {string}
   ·                          ────────
 4 │                        */
   ╰────
  help: Add description comment to `@returns` tag.

  ⚠ jsdoc(require-returns-description): Missing JSDoc `@returns` description.
   ╭─[require_returns_description.tsx:3:17]
 2 │                       /**
 3 │                        * @return
   ·                          ───────
 4 │                        */
   ╰────
  help: Add description comment to `@returns` tag.
