crates/oxc_linter_rules/src/snapshots/jsdoc_require_returns_type.snap
---
source: crates/oxc_linter_rules/src/tester.rs
---

  ⚠ jsdoc(require-returns-type): Missing JSDoc `@returns` type.
   ╭─[require_returns_type.tsx:3:17]
 2 │                       /**
 3 │                        * @returns
   ·                          ────────
 4 │                        */
   ╰────
  help: Add {type} to `@returns` tag.

  ⚠ jsdoc(require-returns-type): Missing JSDoc `@returns` type.
   ╭─[require_returns_type.tsx:3:17]
 2 │                       /**
 3 │                        * @returns Foo.
   ·                          ────────
 4 │                        */
   ╰────
  help: Add {type} to `@returns` tag.

  ⚠ jsdoc(require-returns-type): Missing JSDoc `@returns` type.
   ╭─[require_returns_type.tsx:3:17]
 2 │                       /**
 3 │                        * @return Foo.
   ·                          ───────
 4 │                        */
   ╰────
  help: Add {type} to `@returns` tag.
